# TermOSx86_64

./: .gitignore  README.md
arch/: .gitignore
arch/x86/: Makefile  README.md  linker.ld  run.sh
arch/x86/boot/: boot.asm
arch/x86/drivers/: IO.asm
arch/x86/kernel/: kernel.cpp
arch/x86/kernel/include/: ata.hpp  fat32.hpp  idt.hpp  io.hpp  iostream.hpp  pic.hpp  pmm.hpp  stdio.hpp  string.hpp  syscall.hpp  task.hpp  tsh.hpp  vfs.hpp
arch/x86/kernel/src/: ata.cpp  edit.cpp  fat32.cpp  idt.cpp  interrupts.asm  iostream.cpp  pic.cpp  pmm.cpp  stdio.cpp  syscall.cpp  syscall_asm.asm  task.cpp  task_asm.asm  tsh.cpp  vfs.cpp  yield_asm.asm
arch/x86/rkernel/: Cargo.toml  linker.ld
arch/x86/rkernel/.cargo/: config.toml
arch/x86/rkernel/bootloader/src/: bioscalls.asm  bootloader.asm
arch/x86/rkernel/src/: main.rs
arch/x86/rust/: Cargo.toml  Makefile  README.md  i686-termos.json  linker.ld  meson.build
arch/x86/rust/.cargo/: config.toml
arch/x86/rust/boot/: Cargo.toml  primary.asm
arch/x86/rust/boot/src/: main.rs
arch/x86/rust/drivers/: Cargo.toml
arch/x86/rust/drivers/src/: lib.rs
arch/x86/rust/kernel/: Cargo.toml
arch/x86/rust/kernel/src/: main.rs
arch/x86/rust/sysshared/: Cargo.toml
arch/x86/rust/sysshared/src/: lib.rs
arch/x86/rust/utils/: Cargo.toml
assets/: logo.xcf
